[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/btn.png" type="Texture" id=2]
[ext_resource path="res://assets/images/btn-hover.png" type="Texture" id=3]
[ext_resource path="res://prefabs/game_menu/GameMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Menu" type="Node2D" parent="."]
position = Vector2( 859, 400 )
__meta__ = {
"_edit_group_": true
}

[node name="bg" type="ColorRect" parent="Menu"]
margin_left = -878.0
margin_top = -423.0
margin_right = 1110.0
margin_bottom = 701.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect" type="ColorRect" parent="Menu"]
margin_left = -19.0
margin_top = -423.0
margin_right = 177.0
margin_bottom = 701.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Continue" type="Node2D" parent="Menu"]
__meta__ = {
"_edit_group_": true
}

[node name="ContinueBtn" type="TextureButton" parent="Menu/Continue"]
margin_right = 157.0
margin_bottom = 35.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/Continue"]
margin_right = 156.0
margin_bottom = 33.0
custom_colors/font_color = Color( 1, 0.976471, 0.811765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1

[node name="Start" type="Node2D" parent="Menu"]
position = Vector2( 0, 57 )
__meta__ = {
"_edit_group_": true
}

[node name="StartBtn" type="TextureButton" parent="Menu/Start"]
margin_right = 157.0
margin_bottom = 35.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/Start"]
margin_right = 156.0
margin_bottom = 33.0
custom_colors/font_color = Color( 1, 0.976471, 0.811765, 1 )
custom_fonts/font = SubResource( 1 )
text = "New Game"
align = 1
valign = 1

[node name="Quit" type="Node2D" parent="Menu"]
position = Vector2( 0, 164 )
__meta__ = {
"_edit_group_": true
}

[node name="Quit" type="TextureButton" parent="Menu/Quit"]
margin_right = 157.0
margin_bottom = 35.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/Quit"]
margin_right = 156.0
margin_bottom = 33.0
custom_colors/font_color = Color( 1, 0.976471, 0.811765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[connection signal="button_up" from="Menu/Continue/ContinueBtn" to="." method="_on_ContinueBtn_button_up"]
[connection signal="button_up" from="Menu/Start/StartBtn" to="." method="_on_StartBtn_button_up"]
[connection signal="button_up" from="Menu/Quit/Quit" to="." method="_on_Quit_button_up"]
